# hs-pong

./: README.md  pong.cabal
src/: Display.hs  Main.hs  Model.hs
src/Game/: Graphics.hs  Model.hs  Prelude.hs
src/Game/Events/: UIEvent.hs
src/Game/Graphics/: Render.hs
src/Game/Model/: Input.hs
src/Model/: Input.hs
