Name:                pong
Version:             0.1
Synopsis:            A quick game to test out FRP in Haskell.
Description:         
License:             AllRightsReserved
Author:              Timothy Jones
Maintainer:          tim@zimothy.com
Stability:           Experimental
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the game in development mode
  Default: False

Executable pong
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    transformers == 0.3.*,
    mtl == 2.*,
    bytestring == 0.9.*,
    text == 0.11.2.*,
    OpenGL >= 2.2.3 && < 2.6,
    GLUT >= 2.1.2 && < 2.4,
    reactive-banana == 0.7.*

  if flag(development)
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -Werror -fwarn-tabs -fno-warn-orphans
                 -fno-warn-unused-do-bind -funbox-strict-fields -O2
